--- a/RedditPaste/manifest.json
+++ b/RedditPaste/manifest.json
@@ -4,9 +4,9 @@
   "manifest_version": 2,
   "description": "Easily share posts from reddit.",
   "icons": {
-    "16": "icons/icon16.png",
-    "48": "icons/icon48.png",
-    "128": "icons/icon128.png"
+    "16": "icons/RedditPaste-x16.png",
+    "48": "icons/RedditPaste-x48.png",
+    "128": "icons/RedditPaste-x128.png"
   },
   "default_locale": "en",
   "permissions": [
